--- a/index.html
+++ b/index.html
@@ -2,5 +2,7 @@
 <script src="js/binaryheap.js"></script>
 <script src="js/p5.min.js"></script>
 <script src="js/dat.gui.min.js"></script>
+<script src="graphnode.js"></script>
+<script src="robot.js"></script>
 <script src="app.js"></script>
 </body>
